Remove deprecated code and adjust tests (#2336)
* Remove deprecated code and adjust tests

* Enable dev tests